<resources>
    <string name="app_name">SimpleNoteApp</string>
    <string name="addfab">addFab</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="note_title">Note:</string>
    <string name="date_example">MM/DD/YYYY</string>
    <string name="note_image">noteImage</string>
    <string name="example_title">Example Title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_title">Title</string>
    <string name="note_description">Description</string>
    <string name="note_image_url">Image Url</string>
    <string name="delete">DELETE</string>
    <string name="add_note">add Note</string>
    <string name="update_note">Update</string>
    <string name="delete_note">Delete</string>
    <string name="updated_on">Updated on:</string>
    <string name="info_icon">infoIcon</string>
    <string name="alert">Alert!</string>
    <string name="want_to_update">Do you want to update this note?</string>
    <string name="update">UPDATE</string>
    <string name="cancel">CANCEL</string>
    <string name="error_update">Title and Note Description must not be empty, please check the entries.</string>
    <string name="want_to_add">Do you want to add this note?</string>
    <string name="add">ADD</string>
    <string name="want_to_delete">Do you want to delete this note?</string>
</resources>