<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="8dp"
    android:id="@+id/parentItemCard"
    android:clickable="true"
    android:elevation="4dp"
    android:focusable="true"
    android:backgroundTint="@color/thePurple"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noteDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/date_example"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noteUpdatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/date_example"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteDate" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noteUpdatedDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/updated_on"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/noteUpdatedDate"
            app:layout_constraintTop_toBottomOf="@id/noteDate" />

        <ImageView
            android:id="@+id/infoIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="@dimen/margin_small"
            android:contentDescription="@string/info_icon"
            android:src="@drawable/ic_information"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/noteUpdatedDateText"
            app:layout_constraintTop_toBottomOf="@id/noteDate" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/note_title"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:textColor="@color/theYellow"
            app:layout_constraintBottom_toTopOf="@id/noteText"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/guideline2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/lorem_ipsum"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/guideline2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />

        <ImageView
            android:id="@+id/noteImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/note_image"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxWidth="@dimen/input_text_height"
            android:maxLines="1"
            android:minLines="1"
            android:text="@string/example_title"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            android:textColor="@color/theYellow"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>